Fix ESG menu overflow

--- a/src/scss/partials/_emojiDropdown.scss
+++ b/src/scss/partials/_emojiDropdown.scss
@@ -107,6 +107,7 @@
 		.emoticons-content {
 			flex: 1;
 			padding: 0;
+			position: relative;
 		}
 		
 		.scrollable {
